# era-evm-tester

./: .gitmodules  Cargo.toml  README.md  ethereum-general-state-tests.yaml  rust-toolchain.toml
.github/workflows/: general_state_tests.yaml
evm_tester/: Cargo.toml  build.rs
evm_tester/src/: environment.rs  filters.rs  lib.rs  utils.rs  workflow.rs
evm_tester/src/evm_tester/: arguments.rs  main.rs
evm_tester/src/summary/: mod.rs
evm_tester/src/summary/element/: mod.rs
evm_tester/src/summary/element/outcome/: mod.rs  passed_variant.rs
evm_tester/src/test/: mod.rs
evm_tester/src/test/case/: mod.rs  post_state_for_case.rs  transaction.rs
evm_tester/src/test/filler_structure/: mod.rs
evm_tester/src/test/test_structure/: env_section.rs  info_section.rs  mod.rs  post_state.rs  pre_state.rs  transaction_section.rs
evm_tester/src/test_suits/: mod.rs
evm_tester/src/test_suits/ethereum_general_state/: mod.rs
evm_tester/src/test_suits/ethereum_general_state/index/: directory.rs  enabled.rs  mod.rs  test_file.rs
evm_tester/src/vm/: execution_result.rs  mod.rs
evm_tester/src/vm/eravm/: address_iterator.rs  address_iterator_evm.rs  constants.rs  evm_bytecode_hash.rs  mod.rs  system_context.rs  system_contracts.rs
evm_tester/src/vm/eravm/deployers/: dummy_deployer.rs  system_contract_deployer.rs
evm_tester/src/vm/output/: event.rs  mod.rs  value.rs
evm_tester/src/vm/zk_ee/: mod.rs  transaction.rs
indexes/zk_ee/: ethereum-general-state-tests.yaml
