[package]
name = "evm-tester"
version = "1.5.0"
authors = [
    "Vladislav Volosnikov <vv@matterlabs.dev>"
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Testing framework for EVM implementations"

[[bin]]
name = "evm-tester"
path = "src/evm_tester/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "=0.3.26", default-features = false }
anyhow = "=1.0.89"
which = "=6.0.3"
colored = "=2.1.0"

serde = { version = "=1.0.210", features = ["derive"] }
serde_json = { version = "=1.0.128", features = ["arbitrary_precision"] }
serde_yaml = "=0.9.34"
serde_yml = "0.0.12"
yaml-rust2 = "*"
num-bigint = { version = "0.4", features = ["serde"] }
md5 = "=0.7.0"
hex = "=0.4.3"
sha3 = "=0.10.8"
ron = "=0.8.1"
rlp = "=0.5.2"
regex = "=1.11.0"
glob = "=0.3.1"
semver = { version = "=1.0.23", features = ["serde"] }
itertools = "=0.13.0"
once_cell = "=1.20.2"
rayon = "=1.10.0"
lazy_static = "=1.5.0"
bincode = "=1.3.3"

evm = { git = "https://github.com/rust-ethereum/evm", rev = "f7a23df6c478ca6a151af5f60e62944800529a61" }
revm = { git = "https://github.com/bluealloy/revm", rev = "fa5650ee8a4d802f4f3557014dd157adfb074460" }
revme = { git = "https://github.com/bluealloy/revm", rev = "fa5650ee8a4d802f4f3557014dd157adfb074460", package = "revme"}

zkevm_opcode_defs = "=0.150.6"
zkevm_tester = { git = "https://github.com/0xVolosnikov/era-zkevm_tester", rev = "cbade136a9060abd8ec29e06ed6c1bd14dec4ff6" }
vm2 = { git = "https://github.com/matter-labs/vm2", optional = true, package = "zksync_vm2" }

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-downloader = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

zksync_types = { git = "https://github.com/matter-labs/zksync-era", branch = "evm-emulator/testing", package = "zksync_types", commit ="fdeea9a44a2653d8f147553b3e18d4f702df5234"}
zksync_system_constants = { git = "https://github.com/matter-labs/zksync-era", branch = "evm-emulator/testing", package = "zksync_system_constants", commit ="fdeea9a44a2653d8f147553b3e18d4f702df5234" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era", branch = "evm-emulator/testing", package = "zksync_contracts", commit ="fdeea9a44a2653d8f147553b3e18d4f702df5234" }
zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era", branch = "evm-emulator/testing", package = "zksync_basic_types", commit ="fdeea9a44a2653d8f147553b3e18d4f702df5234" }

zk_os_forward_system = {package = "forward_system",  git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main" }
zk_ee = { package = "zk_ee",  git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main"  }
zk_os_evm_interpreter = { package = "evm_interpreter",  git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main"  }
zk_os_basic_system = { package = "basic_system",  git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main"  }
zk_os_basic_bootloader = { package = "basic_bootloader",  git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main" , features = ["code_in_kernel_space"] }
zk_os_system_hooks = { package = "system_hooks",  git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main"  }
zk_os_oracle_provider = {package = "oracle_provider", git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main"  }
zk_os_runner = {package = "zk_os_runner", git="ssh://git@github.com/matter-labs/zk_ee.git", branch = "main"  }
risc_v_simulator = { git = "https://github.com/matter-labs/air_compiler", features=["delegation"]}

[dependencies.web3]
version = "=0.19.0"
default-features = false
features = ["http-rustls-tls", "test", "signing"]

[dependencies.reqwest]
version = "=0.11.27"
default-features = false
features = ["blocking"]


